cmake_minimum_required(VERSION 3.20)
project(noitabin)

set(CMAKE_CXX_STANDARD 23)

if (LIBNOITABIN_SHARED_LIBRARY)
    set(LIBRARY_TYPE SHARED)
    message("Building shared libnoitabin")
else ()
    set(LIBRARY_TYPE STATIC)
    message("Building static libnoitabin")
endif ()

add_subdirectory(lib/binary_io)
add_subdirectory(lib/fastlz)

add_library(noitabin ${LIBRARY_TYPE}
        includes/noita.h

        sources/noita.cpp
        sources/entity.cpp
        sources/parser.cpp
        sources/types.cpp

        sources/components/AIAttackComponent.cpp
        sources/components/AIComponent.cpp
        sources/components/AbilityComponent.cpp
        sources/components/AdvancedFishAIComponent.cpp
        sources/components/AltarComponent.cpp
        sources/components/AnimalAIComponent.cpp
        sources/components/ArcComponent.cpp
        sources/components/AreaDamageComponent.cpp
        sources/components/AttachToEntityComponent.cpp
        sources/components/AudioComponent.cpp
        sources/components/AudioListenerComponent.cpp
        sources/components/AudioLoopComponent.cpp
        sources/components/BiomeTrackerComponent.cpp
        sources/components/BlackHoleComponent.cpp
        sources/components/BookComponent.cpp
        sources/components/BossDragonComponent.cpp
        sources/components/BossHealthBarComponent.cpp
        sources/components/CameraBoundComponent.cpp
        sources/components/CardinalMovementComponent.cpp
        sources/components/CellEaterComponent.cpp
        sources/components/CharacterCollisionComponent.cpp
        sources/components/CharacterDataComponent.cpp
        sources/components/CharacterPlatformingComponent.cpp
        sources/components/CharacterStatsComponent.cpp
        sources/components/CollisionTriggerComponent.cpp
        sources/components/ConsumableTeleportComponent.cpp
        sources/components/ControllerGoombaAIComponent.cpp
        sources/components/ControlsComponent.cpp
        sources/components/CrawlerAnimalComponent.cpp
        sources/components/CutThroughWorldDoneHereComponent.cpp
        sources/components/DamageModelComponent.cpp
        sources/components/DamageNearbyEntitiesComponent.cpp
        sources/components/DebugFollowMouseComponent.cpp
        sources/components/DebugLogMessagesComponent.cpp
        sources/components/DebugSpatialVisualizerComponent.cpp
        sources/components/DieIfSpeedBelowComponent.cpp
        sources/components/DroneLauncherComponent.cpp
        sources/components/DrugEffectComponent.cpp
        sources/components/DrugEffectModifierComponent.cpp
        sources/components/ElectricChargeComponent.cpp
        sources/components/ElectricityComponent.cpp
        sources/components/ElectricityReceiverComponent.cpp
        sources/components/ElectricitySourceComponent.cpp
        sources/components/EndingMcGuffinComponent.cpp
        sources/components/EnergyShieldComponent.cpp
        sources/components/ExplodeOnDamageComponent.cpp
        sources/components/ExplosionComponent.cpp
        sources/components/FishAIComponent.cpp
        sources/components/FlyingComponent.cpp
        sources/components/FogOfWarRadiusComponent.cpp
        sources/components/FogOfWarRemoverComponent.cpp
        sources/components/GameAreaEffectComponent.cpp
        sources/components/GameEffectComponent.cpp
        sources/components/GameLogComponent.cpp
        sources/components/GameStatsComponent.cpp
        sources/components/GasBubbleComponent.cpp
        sources/components/GenomeDataComponent.cpp
        sources/components/GhostComponent.cpp
        sources/components/GodInfoComponent.cpp
        sources/components/GunComponent.cpp
        sources/components/HealthBarComponent.cpp
        sources/components/HitEffectComponent.cpp
        sources/components/HitboxComponent.cpp
        sources/components/HomingComponent.cpp
        sources/components/HotspotComponent.cpp
        sources/components/IKLimbAttackerComponent.cpp
        sources/components/IKLimbComponent.cpp
        sources/components/IKLimbWalkerComponent.cpp
        sources/components/IKLimbsAnimatorComponent.cpp
        sources/components/IngestionComponent.cpp
        sources/components/InheritTransformComponent.cpp
        sources/components/InteractableComponent.cpp
        sources/components/Inventory2Component.cpp
        sources/components/InventoryComponent.cpp
        sources/components/InventoryGuiComponent.cpp
        sources/components/ItemAIKnowledgeComponent.cpp
        sources/components/ItemActionComponent.cpp
        sources/components/ItemAlchemyComponent.cpp
        sources/components/ItemChestComponent.cpp
        sources/components/ItemComponent.cpp
        sources/components/ItemCostComponent.cpp
        sources/components/ItemPickUpperComponent.cpp
        sources/components/ItemRechargeNearGroundComponent.cpp
        sources/components/ItemStashComponent.cpp
        sources/components/KickComponent.cpp
        sources/components/LaserEmitterComponent.cpp
        sources/components/LevitationComponent.cpp
        sources/components/LifetimeComponent.cpp
        sources/components/LightComponent.cpp
        sources/components/LightningComponent.cpp
        sources/components/LimbBossComponent.cpp
        sources/components/LiquidDisplacerComponent.cpp
        sources/components/LoadEntitiesComponent.cpp
        sources/components/LocationMarkerComponent.cpp
        sources/components/LooseGroundComponent.cpp
        sources/components/LuaComponent.cpp
        sources/components/MagicConvertMaterialComponent.cpp
        sources/components/MagicXRayComponent.cpp
        sources/components/ManaReloaderComponent.cpp
        sources/components/MaterialAreaCheckerComponent.cpp
        sources/components/MaterialInventoryComponent.cpp
        sources/components/MaterialSeaSpawnerComponent.cpp
        sources/components/MaterialSuckerComponent.cpp
        sources/components/MoveToSurfaceOnCreateComponent.cpp
        sources/components/MusicEnergyAffectorComponent.cpp
        sources/components/NinjaRopeComponent.cpp
        sources/components/NullDamageComponent.cpp
        sources/components/OrbComponent.cpp
        sources/components/ParticleEmitterComponent.cpp
        sources/components/PathFindingComponent.cpp
        sources/components/PathFindingGridMarkerComponent.cpp
        sources/components/PhysicsAIComponent.cpp
        sources/components/PhysicsBody2Component.cpp
        sources/components/PhysicsBodyCollisionDamageComponent.cpp
        sources/components/PhysicsBodyComponent.cpp
        sources/components/PhysicsImageShapeComponent.cpp
        sources/components/PhysicsJoint2Component.cpp
        sources/components/PhysicsJoint2MutatorComponent.cpp
        sources/components/PhysicsJointComponent.cpp
        sources/components/PhysicsKeepInWorldComponent.cpp
        sources/components/PhysicsPickUpComponent.cpp
        sources/components/PhysicsRagdollComponent.cpp
        sources/components/PhysicsShapeComponent.cpp
        sources/components/PhysicsThrowableComponent.cpp
        sources/components/PixelSceneComponent.cpp
        sources/components/PixelSpriteComponent.cpp
        sources/components/PlatformShooterPlayerComponent.cpp
        sources/components/PlayerCollisionComponent.cpp
        sources/components/PlayerStatsComponent.cpp
        sources/components/PositionSeedComponent.cpp
        sources/components/PotionComponent.cpp
        sources/components/PressurePlateComponent.cpp
        sources/components/ProjectileComponent.cpp
        sources/components/RotateTowardsComponent.cpp
        sources/components/SetLightAlphaFromVelocityComponent.cpp
        sources/components/SetStartVelocityComponent.cpp
        sources/components/ShotEffectComponent.cpp
        sources/components/SimplePhysicsComponent.cpp
        sources/components/SineWaveComponent.cpp
        sources/components/SpriteAnimatorComponent.cpp
        sources/components/SpriteComponent.cpp
        sources/components/SpriteOffsetAnimatorComponent.cpp
        sources/components/SpriteParticleEmitterComponent.cpp
        sources/components/SpriteStainsComponent.cpp
        sources/components/StatusEffectDataComponent.cpp
        sources/components/StreamingKeepAliveComponent.cpp
        sources/components/TelekinesisComponent.cpp
        sources/components/TeleportComponent.cpp
        sources/components/TeleportProjectileComponent.cpp
        sources/components/TextLogComponent.cpp
        sources/components/TorchComponent.cpp
        sources/components/UIIconComponent.cpp
        sources/components/UIInfoComponent.cpp
        sources/components/VariableStorageComponent.cpp
        sources/components/VelocityComponent.cpp
        sources/components/VerletPhysicsComponent.cpp
        sources/components/VerletWeaponComponent.cpp
        sources/components/VerletWorldJointComponent.cpp
        sources/components/WalletComponent.cpp
        sources/components/WalletValuableComponent.cpp
        sources/components/WorldStateComponent.cpp
        sources/components/WormAIComponent.cpp
        sources/components/WormAttractorComponent.cpp
        sources/components/WormComponent.cpp
        sources/components/WormPlayerComponent.cpp
)
target_include_directories(noitabin PUBLIC includes)
target_link_libraries(noitabin PRIVATE fastlz PUBLIC binaryio)
